# PVNN

./: README.md
code/classification/: test.py  train.py
code/classification/lib/: custom_layers.py
code/classification/models/: classifier.py
code/classification/utils/: initialize.py
code/gene/: README.md  train.py
code/gene/configs/: CNN_TEB.txt  HCNN_MultiK_TEB.txt  HCNN_SingleK_TEB.txt
code/gene/models/: benchmark_models.py
code/gene/utils/: data_utils.py  initialize.py
code/graph/: README.md  train.py
code/graph/configs/: __init__.py  base.yaml  datasets.yaml  pvnn.yaml
code/graph/data/: README.md
code/graph/lib/: Klein_manifold.py  data_loader.py  gyrobn_pv.py  lorentz_layers.py
code/graph/models/: geometric_models.py
graph/: README.md  main.py  pyproject.toml  requirements.txt  train.py
graph/configs/: datasets.yaml
graph/data/: loader.py
graph/data/raw/: README.txt
graph/lib/pv/: gyrobn.py
graph/models/: geometric_models.py
lib/: HNN_manifold.py  Klein_manifold.py  Lorentz_manifold.py  PV_manifold.py  custom_layers.py  data_loader.py  gyrobn_pv.py  lorentz_layers.py  math_utils.py
lib/Euclidean/: __init__.py  mlr.py
lib/klein/: Klein_manifold.py  __init__.py  manifold.py
lib/lorentz/: Lorentz_manifold.py  __init__.py  graph_manifold.py  lorentz_layers.py
lib/poincare/: __init__.py  blocks_1d.py  hnn_manifold.py  layers_1d.py
lib/poincare/layers/: GaneaPoincareMLR.py  (+1 more)
lib/pv/: PV_manifold.py  PV_monifold.py  __init__.py  blocks_1d.py  debug.py  graph_ops.py  gyrobn_pv.py  layers.py  layers_1d.py  manifold.py  mlr.py
(+19 files in other folders)
