[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pvnn-section62"
version = "0.1.0"
description = "Clean PVNN implementation for Section 6.2 experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["models", "models.*", "configs", "configs.*", "lib", "lib.*", "data", "data.*"]
exclude = ["src*", "scripts*"]

